--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "react-dom": "19.2.3"
   },
   "devDependencies": {
+    "@types/node": "20.19.27",
+    "@types/react": "18.3.27",
+    "@types/react-dom": "^18.2.7",
     "eslint": "^9",
-    "eslint-config-next": "16.1.1"
+    "eslint-config-next": "16.1.1",
+    "typescript": "^5.5.0"
   }
 }
